Fix scroll momentum on iOS

--- a/client/src/components/app/style.module.css
+++ b/client/src/components/app/style.module.css
@@ -5,6 +5,7 @@
 
 .sidebar,
 .content {
+  -webkit-overflow-scrolling: touch;
   height: 100%;
   overflow: auto;
 }
